k8s/localagi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localagi-ingress
  namespace: localagi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: localagi
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: localagi
            port:
              number: 80
